samples/errors/array_not_array.lox
// Error: arrayGet on non-array should produce runtime error
arrayGet(42, 0);
